--- a/loan_app/views/loan_menus.xml
+++ b/loan_app/views/loan_menus.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <odoo>
+    <!-- Root Menu -->
     <menuitem id="loan_app_menu_root" name="Loan" 
         web_icon="loan_app,static/description/icon.png" sequence="-1" />
 
-    <menuitem id="loan_app_settings_menu" name="Settings" 
+    <!-- Settings Menu -->
+    <menuitem id="loan_app_setting_menu" name="Settings" 
         parent="loan_app_menu_root" />
 </odoo>
