--- a/loan_app/views/loan_plan_views.xml
+++ b/loan_app/views/loan_plan_views.xml
@@ -1,43 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <odoo>
-    <!-- Form -->
-    <record id="loan_plan_view_form" model="ir.ui.view">
-        <field name="name">loan.plan.view.form</field>
-        <field name="model">loan.plan</field>
-        <field name="arch" type="xml">
-            <form string="Loan plans">
-                <sheet>
-                    <group>
-                        <field name="name" />
-                        <field name="interest" />
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
     <!-- Tree -->
     <record id="loan_plan_view_tree" model="ir.ui.view">
         <field name="name">loan.plan.view.tree</field>
         <field name="model">loan.plan</field>
         <field name="arch" type="xml">
-            <tree string="Loan Plans">
+            <tree string="Loan Plans" editable="bottom">
                 <field name="name" />
                 <field name="interest" />
             </tree>
         </field>
     </record>
-
-    <!-- Loan Plan Action -->
-    <record id="loan_plan_action" model="ir.actions.act_window">
-        <field name="name">Loan Plans</field>
-        <field name="res_model">loan.plan</field>
-        <field name="view_mode">tree,form</field>
-    </record>
-
-    <!-- Loan Plan Menu -->
-    <menuitem id="loan_plan_menu_action" name="Loan Plans"
-        parent="loan_app_setting_menu" action="loan_plan_action" />
-
 </odoo>
