--- a/loan_app/views/loan_type_views.xml
+++ b/loan_app/views/loan_type_views.xml
@@ -1,42 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <odoo>
-    <!-- Form -->
-    <record id="loan_type_view_form" model="ir.ui.view">
-        <field name="name">loan.type.view.form</field>
-        <field name="model">loan.type</field>
-        <field name="arch" type="xml">
-            <form string="Loan Types">
-                <sheet>
-                    <group>
-                        <field name="name" />
-                        <field name="description" />
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
     <!-- Tree -->
     <record id="loan_type_view_tree" model="ir.ui.view">
         <field name="name">loan.type.view.tree</field>
         <field name="model">loan.type</field>
         <field name="arch" type="xml">
-            <tree string="Loan Types">
+            <tree string="Loan Types" editable="bottom">
                 <field name="name" />
-                <field name="description" />
             </tree>
         </field>
     </record>
-    
-    <!-- Loan Type Action -->
-    <record id="loan_type_action" model="ir.actions.act_window">
-        <field name="name">Loan Types</field>
-        <field name="res_model">loan.type</field>
-        <field name="view_mode">tree,form</field>
-    </record>
-
-    <!-- Loan Type Menu -->
-    <menuitem id="loan_type_menu_action" name="Loan Types"
-        parent="loan_app_setting_menu" action="loan_type_action" />
 </odoo>
