--- a/loan_app/views/loan_borrow_views.xml
+++ b/loan_app/views/loan_borrow_views.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <odoo>
+    <!-- Form -->
     <record id="loan_borrow_view_form" model="ir.ui.view">
         <field name="name">loan.borrow.view.form</field>
         <field name="model">loan.borrow</field>
         <field name="arch" type="xml">
             <form string="Loan Borrow">
+                <header>
+                    <button name="action_submit" type="object" string="Submit" states="draft" />
+                    <button name="action_approve" type="object" string="Approve" states="submitted" />
+                    <button name="action_cancel" type="object" string="Cancel" states="draft,submitted" />
+                    <field name="state" widget="statusbar" statusbar_visible="draft,submitted,approved,canceled" />
+                </header>
                 <sheet>
                     <h1> 
-                        <field name="borrower_id" />
+                        <field name="borrower_id" options="{'no_create': True, 'no_edit': True}" />
                     </h1>
                     <group>
                         <group>
-                            <field name="loan_amount" />
-                            <field name="loan_plan_id" />
-                            <field name="loan_type_id" />
+                            <field name="loan_amount" options="{'no_create': True, 'no_edit': True}" />
+                            <field name="loan_plan_id" options="{'no_create': True, 'no_edit': True}" />
+                            <field name="loan_type_id" options="{'no_create': True, 'no_edit': True}" />
                             <field name="active" />
                         </group>
                     </group>
@@ -29,7 +36,7 @@
                                 <field name="monthly_amount_due" />
                             </group>
                         </page>
-                        <page string="Monthly">
+                        <page string="Installments">
                         </page>
                         <page string="Other Info">
                         </page>
@@ -44,12 +51,31 @@
         <field name="name">loan.borrow.view.tree</field>
         <field name="model">loan.borrow</field>
         <field name="arch" type="xml">
-            <tree string="Borrows">
+            <tree string="Borrows" decoration-success="state == 'approved'"
+                decoration-info="state == 'submitted'" decoration-danger="state == 'canceled'">
                 <field name="borrower_id" />
                 <field name="loan_plan_id" />
                 <field name="loan_type_id" />
                 <field name="loan_amount" />
+                <field name="state" invisible="1" />
             </tree>
+        </field>
+    </record>
+
+    <!-- Search -->
+    <record id="loan_borrow_view_search" model="ir.ui.view">
+        <field name="name">loan.borrow.view.search</field>
+        <field name="model">loan.borrow</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="borrower_id" />
+                <field name="loan_plan_id" />
+                <field name="loan_type_id" />
+                <field name="loan_amount" />
+                <searchpanel>
+                    <field name="state" icon="fa-users" enable_counters="1" select="multi" />
+                </searchpanel>
+            </search>
         </field>
     </record>
 </odoo>
