[IMP] Done calculating installments.

--- a/loan_app/views/loan_borrow_views.xml
+++ b/loan_app/views/loan_borrow_views.xml
@@ -8,20 +8,28 @@
         <field name="arch" type="xml">
             <form string="Loan Borrow">
                 <header>
-                    <button name="action_submit" type="object" string="Submit" states="draft" />
-                    <button name="action_approve" type="object" string="Approve" states="submitted" />
-                    <button name="action_cancel" type="object" string="Cancel" states="draft,submitted" />
-                    <field name="state" widget="statusbar" statusbar_visible="draft,submitted,approved,canceled" />
+                    <button name="action_submit" type="object" 
+                        string="Submit" states="draft" />
+                    <button name="action_approve" type="object" 
+                        string="Approve" states="submitted" />
+                    <button name="action_cancel" type="object" 
+                        string="Cancel" states="draft,submitted" />
+                    <field name="state" widget="statusbar" 
+                        statusbar_visible="draft,submitted,approved,canceled" />
                 </header>
                 <sheet>
                     <h1> 
-                        <field name="borrower_id" options="{'no_create': True, 'no_edit': True}" />
+                        <field name="borrower_id" 
+                            options="{'no_create': True, 'no_edit': True}" />
                     </h1>
                     <group>
                         <group>
-                            <field name="loan_amount" options="{'no_create': True, 'no_edit': True}" />
-                            <field name="loan_plan_id" options="{'no_create': True, 'no_edit': True}" />
-                            <field name="loan_type_id" options="{'no_create': True, 'no_edit': True}" />
+                            <field name="loan_amount" 
+                                options="{'no_create': True, 'no_edit': True}" />
+                            <field name="loan_plan_id" 
+                                options="{'no_create': True, 'no_edit': True}" />
+                            <field name="loan_type_id" 
+                                options="{'no_create': True, 'no_edit': True}" />
                             <field name="active" />
                         </group>
                     </group>
@@ -33,10 +41,18 @@
                                 <field name="amount_to_receive" />
                                 <field name="interest_rate" />
                                 <field name="term" />
-                                <field name="monthly_amount_due" />
+                                <field name="amount_due" />
                             </group>
                         </page>
-                        <page string="Installments">
+                        <page string="Installments" attrs="{'invisible': [('state', '!=', 'approved')]}">
+                            <field name="loan_payment_ids">
+                                <tree create="false" editable="bottom" delete="false">
+                                    <field name="loan_borrow_id" readonly="1" />
+                                    <field name="payment_date" readonly="1" />
+                                    <field name="amount_due" readonly="1" />
+                                    <field name="state" readonly="1" />
+                                </tree>
+                            </field>
                         </page>
                         <page string="Other Info">
                         </page>
