--- a/loan_app/views/loan_borrow_views.xml
+++ b/loan_app/views/loan_borrow_views.xml
@@ -98,4 +98,34 @@
             </search>
         </field>
     </record>
+
+    <!-- Kanban -->
+    <record id="loan_borrow_view_kanban" model="ir.ui.view">
+        <field name="name">loan.borrow.view.kanban</field>
+        <field name="model">loan.borrow</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="state" records_draggable="0">
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click mb-3">
+                            <div class="mb-2">
+                                <strong class="o_kanban_record_title">
+                                    <field style="font-size: 1.3rem;" name="borrower_id"/>
+                                </strong>
+                            </div>
+                            <div>
+                                Amount: <field name="loan_amount"/>
+                            </div>
+                            <div>
+                                Term: <field name="loan_plan_id"/> months
+                            </div>
+                            <div>
+                                Type: <field name="loan_type_id"/>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
 </odoo>
