--- a/loan_borrower/views/loan_menus.xml
+++ b/loan_borrower/views/loan_menus.xml
@@ -3,12 +3,12 @@
 <odoo>
     <!-- Loan Borrower Action -->
     <record id="loan_borrower_action" model="ir.actions.act_window">
-        <field name="name">Borrowers</field>
+        <field name="name">Members</field>
         <field name="res_model">loan.borrower</field>
         <field name="view_mode">tree,form</field>
     </record>
 
     <!-- Loan Borrower Menu -->
-    <menuitem id="loan_borrower_menu_action" name="Borrowers" sequence="-100"
-        parent="loan_app.loan_app_setting_menu" action="loan_borrower_action" />
+    <menuitem id="loan_borrower_menu_action" name="Members" sequence="-101"
+        parent="loan_app.loan_app_menu_root" action="loan_borrower_action" />
 </odoo>
