--- a/loan_app/views/loan_borrow_views.xml
+++ b/loan_app/views/loan_borrow_views.xml
@@ -8,11 +8,11 @@
         <field name="arch" type="xml">
             <form string="Loan Borrow">
                 <header>
-                    <button name="action_submit" type="object" 
+                    <button class="btn-primary" name="action_submit" type="object" 
                         string="Submit" states="draft" />
-                    <button name="action_approve" type="object" 
+                    <button class="btn-primary" name="action_approve" type="object" 
                         string="Approve" states="submitted" />
-                    <button name="action_cancel" type="object" 
+                    <button class="btn-danger" name="action_cancel" type="object" 
                         string="Cancel" states="submitted" />
                     <field name="state" widget="statusbar" 
                         statusbar_visible="draft,submitted,approved,closed,canceled" />
