--- a/loan_app/views/loan_plan_views.xml
+++ b/loan_app/views/loan_plan_views.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <odoo>
+    <!-- Form -->
+    <record id="loan_plan_view_form" model="ir.ui.view">
+        <field name="name">loan.plan.view.form</field>
+        <field name="model">loan.plan</field>
+        <field name="arch" type="xml">
+            <form string="Loan Plans">
+                <sheet>
+                    <group>
+                        <field name="name" />
+                        <field name="interest" />
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
     <!-- Tree -->
     <record id="loan_plan_view_tree" model="ir.ui.view">
         <field name="name">loan.plan.view.tree</field>
