--- a/loan_app/views/loan_form_template.xml
+++ b/loan_app/views/loan_form_template.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<odoo>
+<odoo noupdate="0">
     <!-- Template to check if user is logged in -->
     <template id="is_user_logged_in">
         <t t-if="user_id">
@@ -11,14 +11,7 @@
         </t>
     </template>
 
-    <record id="menu_loan_form" model="website.menu">
-        <field name="name">Loan</field>
-        <field name="url">/loan</field>
-        <field name="parent_id" ref="website.main_menu"/>
-        <field name="sequence">54</field>
-    </record>
-
-    <template id="create_loan" name="Create Loan">
+    <template id="loan_form" name="Loan Form">
         <t t-call="website.layout">
             <div id="wrap">
                 <div class="oe_structure">
@@ -26,13 +19,13 @@
                         <div class="row mt-3 py-3">
                             <div class="col-lg-6 mx-auto">
                                 <h3 class="mb-3">Loan Application</h3>
-                                <form role="form" action="/submit_loan" method="POST">
+                                <form id="loan-form" role="form" action="/submit_loan" method="POST">
                                     <input type="hidden" name="csrf_token"
                                         t-att-value="request.csrf_token()" />
                                     <div class="mb-3">
                                         <label for="name" class="form-label">Name</label>
                                         <input type="text" class="form-control" id="name" 
-                                            t-att-value="user.name" readonly="readonly" />
+                                            t-att-value="current_user.name" readonly="readonly" />
                                     </div>
                                     <div class="mb-3">
                                         <label for="loan_amount" class="form-label">Amount</label>
@@ -96,4 +89,11 @@
             </div>
         </t>
     </template>
+
+    <record id="menu_loan_form" model="website.menu">
+        <field name="name">Loan</field>
+        <field name="url">/loan</field>
+        <field name="parent_id" ref="website.main_menu"/>
+        <field name="sequence">55</field>
+    </record>
 </odoo>
