--- a/loan_app/views/loan_menus.xml
+++ b/loan_app/views/loan_menus.xml
@@ -16,7 +16,7 @@
     <menuitem id="loan_borrow_menu_action" name="Loan Details" sequence="-102" 
         parent="loan_app_menu_root" action="loan_borrow_action" />
 
-    <!-- Settings Menu -->
+    <!-- Configuration Menu -->
     <menuitem id="loan_app_setting_menu" name="Configuration" 
         parent="loan_app_menu_root" sequence="-100" />
 
